--- a/style.css
+++ b/style.css
@@ -262,4 +262,27 @@ body {
 #resumen-compra .card {
     background-color: #2c2c2c;
     border: 1px solid #444;
+
+}
+.item-carrito {
+    background-color: #2c2c2c;
+    border: 1px solid #444;
+}
+
+.item-carrito img {
+    width: 90px;
+    height: 120px;
+    object-fit: cover;
+}
+
+.resumen-card {
+    background-color: #2c2c2c;
+    border: 1px solid #444;
+    position: sticky; /* Para que el resumen se quede fijo al hacer scroll */
+    top: 20px;
+}
+
+#carrito-contador {
+    font-size: 0.7rem;
+    padding: 0.2em 0.5em;
 }
